@@ -1733,6 +1733,75 @@ argument_list|)
 throw|;
 block|}
 block|}
+name|DistribPhase
+name|phase
+init|=
+name|DistribPhase
+operator|.
+name|parseParam
+argument_list|(
+name|req
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|DISTRIB_UPDATE_PARAM
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|DistribPhase
+operator|.
+name|FROMLEADER
+operator|==
+name|phase
+operator|&&
+operator|!
+name|couldIbeSubShardLeader
+argument_list|(
+name|coll
+argument_list|)
+condition|)
+block|{
+if|if
+condition|(
+name|req
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getCoreDescriptor
+argument_list|()
+operator|.
+name|getCloudDescriptor
+argument_list|()
+operator|.
+name|isLeader
+argument_list|()
+condition|)
+block|{
+comment|// locally we think we are leader but the request says it came FROMLEADER
+comment|// that could indicate a problem, let the full logic below figure it out
+block|}
+else|else
+block|{
+name|isLeader
+operator|=
+literal|false
+expr_stmt|;
+comment|// we actually might be the leader, but we don't want leader-logic for these types of updates anyway.
+name|forwardToLeader
+operator|=
+literal|false
+expr_stmt|;
+return|return
+name|nodes
+return|;
+block|}
+block|}
 name|String
 name|shardId
 init|=
@@ -1885,24 +1954,6 @@ argument_list|)
 decl_stmt|;
 block|}
 block|}
-name|DistribPhase
-name|phase
-init|=
-name|DistribPhase
-operator|.
-name|parseParam
-argument_list|(
-name|req
-operator|.
-name|getParams
-argument_list|()
-operator|.
-name|get
-argument_list|(
-name|DISTRIB_UPDATE_PARAM
-argument_list|)
-argument_list|)
-decl_stmt|;
 name|doDefensiveChecks
 argument_list|(
 name|phase
@@ -2250,27 +2301,16 @@ return|return
 name|nodes
 return|;
 block|}
-DECL|method|amISubShardLeader
+DECL|method|couldIbeSubShardLeader
 specifier|private
 name|boolean
-name|amISubShardLeader
+name|couldIbeSubShardLeader
 parameter_list|(
 name|DocCollection
 name|coll
-parameter_list|,
-name|Slice
-name|parentSlice
-parameter_list|,
-name|String
-name|id
-parameter_list|,
-name|SolrInputDocument
-name|doc
 parameter_list|)
-throws|throws
-name|InterruptedException
 block|{
-comment|// Am I the leader of a shard in "construction" state?
+comment|// Could I be the leader of a shard in "construction/recovery" state?
 name|String
 name|myShardId
 init|=
@@ -2298,18 +2338,23 @@ argument_list|(
 name|myShardId
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
+name|String
+name|state
+init|=
+name|mySlice
+operator|.
+name|getState
+argument_list|()
+decl_stmt|;
+return|return
+operator|(
 name|Slice
 operator|.
 name|CONSTRUCTION
 operator|.
 name|equals
 argument_list|(
-name|mySlice
-operator|.
-name|getState
-argument_list|()
+name|state
 argument_list|)
 operator|||
 name|Slice
@@ -2318,10 +2363,85 @@ name|RECOVERY
 operator|.
 name|equals
 argument_list|(
+name|state
+argument_list|)
+operator|)
+return|;
+block|}
+DECL|method|amISubShardLeader
+specifier|private
+name|boolean
+name|amISubShardLeader
+parameter_list|(
+name|DocCollection
+name|coll
+parameter_list|,
+name|Slice
+name|parentSlice
+parameter_list|,
+name|String
+name|id
+parameter_list|,
+name|SolrInputDocument
+name|doc
+parameter_list|)
+throws|throws
+name|InterruptedException
+block|{
+comment|// Am I the leader of a shard in "construction/recovery" state?
+name|String
+name|myShardId
+init|=
+name|req
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getCoreDescriptor
+argument_list|()
+operator|.
+name|getCloudDescriptor
+argument_list|()
+operator|.
+name|getShardId
+argument_list|()
+decl_stmt|;
+name|Slice
+name|mySlice
+init|=
+name|coll
+operator|.
+name|getSlice
+argument_list|(
+name|myShardId
+argument_list|)
+decl_stmt|;
+name|String
+name|state
+init|=
 name|mySlice
 operator|.
 name|getState
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|Slice
+operator|.
+name|CONSTRUCTION
+operator|.
+name|equals
+argument_list|(
+name|state
+argument_list|)
+operator|||
+name|Slice
+operator|.
+name|RECOVERY
+operator|.
+name|equals
+argument_list|(
+name|state
 argument_list|)
 condition|)
 block|{
